force-app/main/default/objects/interviewer__c/interviewer__c.object-meta.xml
<CustomObject>
    <label>interviewer</label>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>interviewer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>interviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>