force-app/main/default/objects/interviewer__c/fields/employee__c.field-meta.xml
<CustomField>
    <fullName>employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>interviewers</relationshipName>
    <type>Lookup</type>
</CustomField>