force-app/main/default/objects/interviewer__c/fields/legacy_interviewer_number__c.field-meta.xml
<CustomField>
    <fullName>legacy_interviewer_number__c</fullName>
    <label>legacy interviewer number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>