force-app/main/default/objects/interviewer__c/fields/role__c.field-meta.xml
<CustomField>
    <fullName>role__c</fullName>
    <label>role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-general</fullName>
            </value>
            <value>
                <fullName>-functional</fullName>
            </value>
            <value>
                <fullName>-technical</fullName>
            </value>
            <value>
                <fullName>-managerial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>